crates/checker/src/operation_checker/tests/snapshots/nitrogql_checker__operation_checker__tests__selection_set__check_field_arguments_variable.snap
---
source: crates/checker/src/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 3,
            column: 36,
            file: 0,
            builtin: false,
        },
        message: TypeMismatch {
            type: "String",
        },
        additional_info: [],
    },
    CheckError {
        position: Pos {
            line: 4,
            column: 36,
            file: 0,
            builtin: false,
        },
        message: TypeMismatch {
            type: "String",
        },
        additional_info: [],
    },
]
