crates/checker/src/operation_checker/tests/snapshots/nitrogql_checker__operation_checker__tests__selection_set__duplicated_selected_field.snap
---
source: checker/src/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[]
