crates/checker/src/operation_checker/tests/snapshots/nitrogql_checker__operation_checker__tests__selection_set__must_specify_selection_set_for_non_leaf_field.snap
---
source: crates/checker/src/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 3,
            column: 16,
            file: 0,
            builtin: false,
        },
        message: MustSpecifySelectionSet {
            name: "user",
        },
        additional_info: [],
    },
    CheckError {
        position: Pos {
            line: 4,
            column: 16,
            file: 0,
            builtin: false,
        },
        message: MustSpecifySelectionSet {
            name: "users",
        },
        additional_info: [],
    },
]
